feat(coral): Fix hierarchy of `MainNavigation` items, render user's current team (#791)
- Removes Topics submenu, surface All topics at top level ("All topics requests" in designs doesn't seem like a page we will ever have)
- Move My team's request item to top level (was under Topics submenu)
